apps/platform/meilisearch/meilisearch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: meilisearch
  namespace: meilisearch
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "meilisearch.apps.int.scarey.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: meilisearch
          port: 7700
